# comp371

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TreeA.hpp  constants.hpp  dot.cpp  dot.hpp  entity.cpp  entity.hpp  fragment.glsl  glsetup.cpp  grid.cpp  grid.hpp  heightmapterrain.cpp  heightmapterrain.hpp  main.cpp  objloader.cpp  objloader.hpp  pacman.cpp  pacman.hpp  pathloader.cpp  pathloader.hpp  player.cpp  shaderprogram.cpp  shaderprogram.hpp  utils.hpp  vertex.glsl  worldorigin.cpp  worldorigin.hpp
docs/: On Biomes.md  On The Tree Algorithm.md  On theTree Algorithm.rtf  building.md
entities/: entity.hpp  player.cpp  player.hpp  worldorigin.cpp
hunter_installs/: README.md
shaders/: depthFragment.glsl  depthVertex.glsl  fragment Light.glsl  fragment.glsl  fragmentTree.glsl  quad_fragment.glsl  quad_vertex.glsl  vertex Light.glsl  vertex.glsl
src/: HitBox2d.cpp  HitBox2d.hpp  ShaderUniformLocationCache.cpp  ShaderUniformLocationCache.hpp  TreeA.hpp  TreeDistributor.cpp  TreeDistributor.h  TreeDistributor.hpp  TreeRandom.cpp  TreeRandom.hpp  constants.hpp  glsetup.cpp  glsetup.hpp  loadTexture.cpp  loadTexture.hpp  main.cpp  objloader.cpp  objloader.hpp  shaderprogram.cpp  shaderprogram.hpp  utils.hpp
src/entities/: DrawableEntity.cpp  DrawableEntity.hpp  Entity.cpp  Entity.hpp  Leaf.hpp  LeafA.cpp  LeafA.hpp  LeafBranchA.cpp  LeafBranchA.hpp  LeafContainerA.cpp  LeafContainerA.hpp  Light.h  PerlinTerrain.cpp  PerlinTerrain.hpp  Player.cpp  Player.hpp  Rock.cpp  Rock.hpp  RockB.cpp  RockB.hpp  Skybox.cpp  Skybox.hpp  Tentacle.cpp  Tentacle.hpp  Text.cpp  Text.hpp  TextB.cpp  TextB.hpp  Tree.cpp  Tree.hpp  TreeA.cpp  TreeA.hpp  TreeA_NoRotation.h  TreeB.cpp  TreeB.h  TreeB.hpp  TreeC.cpp  TreeC.h  TreeC.hpp  TreeClusterItem.cpp  (+27 more)
src/entities/Trees/: LeafAB.cpp  LeafAB.hpp  LeafBranchAB.cpp  LeafBranchAB.hpp  LeafContainerAB.cpp  LeafContainerAB.hpp  LeafContainerC.cpp  LeafContainerC.hpp  Tree.cpp  Tree.hpp  TreeA.cpp  TreeA.hpp  TreeA_Autumn.cpp  TreeB.cpp  TreeB.hpp  TreeC.cpp  TreeC.hpp  TreeCluster.cpp  TreeCluster.hpp  TreeClusterItem.cpp  TreeClusterItem.hpp  Trunk.cpp  Trunk.hpp  TrunkA.cpp  TrunkA.hpp  TrunkAB.cpp  TrunkAB.hpp  TrunkC.cpp  TrunkC.hpp
src/entities/trees/: AttatchmentGroupings.cpp  AttatchmentGroupings.hpp  LeafAB.cpp  LeafAB.hpp  LeafBranchAB.cpp  LeafBranchAB.hpp  LeafContainerAB.cpp  LeafContainerAB.hpp  LeafContainerC.cpp  Tree.cpp  Tree.hpp  TreeA.cpp  TreeA.hpp  TreeA_Autumn.cpp  TreeA_Autumn.hpp  TreeB.cpp  TreeB.hpp  TreeC.cpp  TreeC.hpp  TreeClusterItem.cpp  TreeClusterItem.hpp  Trunk.cpp  Trunk.hpp  TrunkAB.cpp  TrunkAB.hpp  TrunkC.cpp  TrunkC.hpp
